Added README.md and license

--- a/TaskTimerAnalog.html
+++ b/TaskTimerAnalog.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+  TaskTimer Analog
+  Copyright (c) 2025 Ville Reijonen
+  MIT License - https://github.com/vre/tasktimer
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
