Fix dark mode leading edge in cw and end modes

--- a/TaskTimerAnalog.html
+++ b/TaskTimerAnalog.html
@@ -815,13 +815,15 @@
       if (opacity < 1) path.setAttribute('fill-opacity', opacity);
       g.appendChild(path);
 
-      // In dark mode, add white edge line following time
+      // In dark mode, add white edge line following time (moving edge)
+      // CCW: end edge moves, CW/END: start edge moves
       if (isDark) {
+        const movingEdge = (state.mode === 'ccw') ? { x: x2, y: y2 } : { x: x1, y: y1 };
         const edge = document.createElementNS('http://www.w3.org/2000/svg', 'line');
         edge.setAttribute('x1', CENTER);
         edge.setAttribute('y1', CENTER);
-        edge.setAttribute('x2', x2);
-        edge.setAttribute('y2', y2);
+        edge.setAttribute('x2', movingEdge.x);
+        edge.setAttribute('y2', movingEdge.y);
         edge.setAttribute('stroke', '#fff');
         edge.setAttribute('stroke-width', '2');
         if (opacity < 1) edge.setAttribute('stroke-opacity', opacity);
