--- a/TaskTimer.html
+++ b/TaskTimer.html
@@ -1702,6 +1702,7 @@
       el.goBtn.classList.remove('running');
       el.goBtn.textContent = 'Play';
       el.goBtn.title = 'Resume timer';
+      document.getElementById('timerStatus').textContent = 'Timer paused';
       updateTitle();
     }
 
@@ -1715,6 +1716,7 @@
       el.goBtn.classList.add('running');
       el.goBtn.textContent = 'Pause';
       el.goBtn.title = 'Pause the timer';
+      document.getElementById('timerStatus').textContent = 'Timer resumed';
       animate();
     }
 
